# JSONToCFG

./: .gitignore  CHANGELOG.md  JSONGrammar.hs  JSONToCFG.cabal  LICENSE  ParseLogic.hs  README.md  main.hs
.github/workflows/: haskell.yml
app/: Main.hs
src/: JSONGrammar.hs  ParseLogic.hs  ParseTreeBuilder.hs
tests/: Tests.hs  test2.json
