cabal-version:   3.0
name:            JSONToCFG
version:         0.1.0.0
synopsis:
    This is a JSON parser using the context free grammar for JSON and runs like a pushdown automata with multiple stacks to handle nondeterminism.

license:         MIT
license-file:    LICENSE
author:          Chillerbag
maintainer:      ethanwhawkins@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:     src
    exposed-modules:    ParseLogic
                      , JSONGrammar
                      , ParseTreeBuilder
    build-depends:      base ^>=4.17.2.1
    default-language:   Haskell2010

executable JSONToCFG
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , JSONToCFG
    hs-source-dirs:   app
    default-language: Haskell2010

executable Test
    main-is:          Tests.hs
    hs-source-dirs:   tests
    build-depends:    base ^>=4.17.2.1
                    , JSONToCFG
                    , filepath
    default-language: Haskell2010